# kakara-rs

./: Cargo.toml  README.md  capture.rdc  renderdoc.cap
.github/workflows/: docdeploy.yml
mc-data/: Cargo.toml
src/: main.rs
src/engine/: camera.rs  mod.rs  model.rs  texture.rs  utils.rs
src/engine/render_types/: mod.rs  obj_model.rs  renderer.rs
src/engine/shaders/: shader.wgsl  voxel.wgsl
src/engine/shapes/: complex_shape.rs  cube.rs  mod.rs  quad.rs
src/engine/voxel/: basic_cube.rs  chunk_mesh.rs  cube_data.rs  location.rs  mod.rs  voxel_pipeline.rs  voxel_state.rs
src/engine/voxel/texture_atlas/: cube_textures.rs  mod.rs
src/game/: mod.rs
src/game/blocks/: mod.rs
src/world/: chunk.rs  mod.rs  position.rs
