[workspace]
resolver = "2"
members = ["macros", "mc-data"]
[workspace.package]
license = "MIT"
edition = "2021"
authors = ["Wyatt Herkamp<wherkamp@gmail.com>"]
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
strum = { version = "0.26", features = ["derive"] }

derive_more = { version = "1.0.0-beta.6", features = [
    "deref",
    "deref_mut",
    "from",
    "index",
    "index_mut",
    "into_iterator",
], default-features = false }
[package]
name = "kakara-rs"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
winit = "0.29"
tracing = "0.1"
wgpu = "0.19"
ahash = "0.8"
glam = { version = "0.25", features = ["bytemuck"] }
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
thiserror.workspace = true
cgmath = "0.18"
tobj = { version = "4", features = ["async"] }
strum.workspace = true
derive_more.workspace = true
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
renderdoc = { version = "0.11.0", features = ["ci"], optional = true }
tinyvec = "1"
noise = "0.8"
flume = { version = "0.11" }
deadpool = { git = "https://github.com/bikeshedder/deadpool.git", features = [
    "rt_tokio_1",
] }
bevy_ecs = "0.13"
derive_builder = "0.20"
profiling = "1.0"
auto_impl = "1"
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
[features]
debug = ["renderdoc"]
